--- a/templates/queryjson.html
+++ b/templates/queryjson.html
@@ -125,11 +125,11 @@
         </div>
         <div class="form-group">
           <label for="start-date">Start Date</label>
-          <input type="date" class="form-control" id="start-date" name="start-date" min="1990-01-01" max="2005-12-31>
+          <input type="date" class="form-control" id="start-date" name="start-date" min="1990-01-01" max="2005-12-31">
         </div>
         <div class="form-group">
           <label for="end-date">End Date</label>
-          <input type="date" class="form-control" id="end-date" name="end-date" min="1990-01-01" max="2005-12-31>
+          <input type="date" class="form-control" id="end-date" name="end-date" min="1990-01-01" max="2005-12-31">
         </div>
         <button type="submit" class="btn btn-primary">Filter Data</button>
       </form>
